Move saveconfig.php to settings so that it cannot be used without the settings password This is needed to fix severe security issues

--- a/web/tools/wizzardend.html
+++ b/web/tools/wizzardend.html
@@ -82,7 +82,7 @@
 				<div class="card-footer">
 					<div class="row justify-content-center">
 						<div class="col-3 text-center">
-							<form action="tools/saveconfig.php" method="POST">
+							<form action="settings/saveconfig.php" method="POST">
 								<input type="hidden" name="wizzarddone" value="100">
 								<button class="btn btn-success" type="submit">Fertig</button>
 							</form>
