--- a/web/tools/wizzardstart.html
+++ b/web/tools/wizzardstart.html
@@ -85,7 +85,7 @@
 				<div class="card-footer">
 					<div class="row justify-content-center">
 						<div class="col-3 text-center">
-							<form action="tools/saveconfig.php" method="POST">
+							<form action="settings/saveconfig.php" method="POST">
 								<input type="hidden" name="wizzarddone" value="1">
 								<button class="btn btn-success" type="submit">Weiter...</button>
 							</form>
@@ -127,7 +127,7 @@
 		</div>
 
 		<!-- hidden form to save wizzard done to config -->
-		<form id="wizzarddone" action="tools/saveconfig.php" method="POST">
+		<form id="wizzarddone" action="settings/saveconfig.php" method="POST">
 			<input type="hidden" name="wizzarddone" value="100">
 		</form>
 
