--- a/web/tools/datenschutz.html
+++ b/web/tools/datenschutz.html
@@ -65,7 +65,7 @@
 				<div class="card-header bg-secondary">
 					Datenschutzeinwilligung
 				</div>
-				<form action="tools/datenschutzack.php" method="post">
+				<form action="settings/datenschutzack.php" method="post">
 					<div class="card-body">
 						<div>
 							<iframe src="tools/datenschutzerklaerung.html" width="100%" height="400" class="bg-light"></iframe>
