Moved senddebug.php to settings folder to prevent that it can be used without the settings password This is needed to fix severe security issues

--- a/web/settings/fehlerbericht.html
+++ b/web/settings/fehlerbericht.html
@@ -71,7 +71,7 @@
 			</div>
 
 			<div class="card border-secondary">
-				<form class="form" id="sendDebugMessageForm" action="./tools/senddebug.php" method="POST">
+				<form class="form" id="sendDebugMessageForm" action="./settings/senddebug.php" method="POST">
 					<div class="card-header bg-secondary">
 						Debug-Meldung
 					</div>
