Moved shutdown.html and shutdown.php to settings folder so that they can not be used without settings password This is needed to prevent severe security issues

--- a/web/settings/navbar.html
+++ b/web/settings/navbar.html
@@ -180,7 +180,7 @@
 			</div>
 			<!-- modal footer -->
 			<div class="modal-footer d-flex justify-content-center">
-				<button type="button" class="btn btn-success" data-dismiss="modal" onclick="window.location.href='./tools/shutdown.html'">Shutdown</button>
+				<button type="button" class="btn btn-success" data-dismiss="modal" onclick="window.location.href='./settings/shutdown.html'">Shutdown</button>
 				<button type="button" class="btn btn-danger" data-dismiss="modal">Abbruch</button>
 			</div>
 		</div>
