--- a/web/settings/shutdown.html
+++ b/web/settings/shutdown.html
@@ -97,7 +97,7 @@
 
 				infoText.text("Herunterfahren der openWB angefordert...");
 
-				$.get({ url: "tools/shutdown.php", cache: false }).always(function() {
+				$.get({ url: "settings/shutdown.php", cache: false }).always(function() {
 					infoText.text("Herunterfahren läuft... nach dem Herunterfahren ist die openWB nicht mehr erreichbar.");
 					infoText.removeClass("alert-info");
 					infoText.addClass("alert-success");
