Moved reboot.html and restart.php to the settings folder to prevent that they are used without the settings password This is needed to prevent severe security issues

--- a/web/settings/reboot.html
+++ b/web/settings/reboot.html
@@ -97,7 +97,7 @@
 
 				infoText.text("Neustart der openWB angefordert...");
 
-				$.get({ url: "tools/restart.php", cache: false }).always(function() {
+				$.get({ url: "settings/restart.php", cache: false }).always(function() {
 					infoText.text("Neustart läuft... bitte warten, die Weiterleitung erfolgt automatisch.");
 					infoText.removeClass("alert-info");
 					infoText.addClass("alert-success");
