Moved bckredirect.html and backup.php to the settings folder to prevent that they are used without settings password This is needed to fix security issues

--- a/web/settings/bckredirect.html
+++ b/web/settings/bckredirect.html
@@ -87,7 +87,7 @@
 			);
 
 			// call backup script with parameter so filename is generated with timestamp
-			setTimeout(function() { window.location = "tools/backup.php?extendedFilename=1"; }, 3000);
+			setTimeout(function() { window.location = "settings/backup.php?extendedFilename=1"; }, 3000);
 
 		</script>
 
