--- a/web/settings/navbar.html
+++ b/web/settings/navbar.html
@@ -99,7 +99,7 @@
 			</div>
 			<!-- modal footer -->
 			<div class="modal-footer d-flex justify-content-center">
-				<button type="button" class="btn btn-success" data-dismiss="modal" onclick="window.location.href='./tools/bckredirect.html'">Backup</button>
+				<button type="button" class="btn btn-success" data-dismiss="modal" onclick="window.location.href='./settings/bckredirect.html'">Backup</button>
 				<button type="button" class="btn btn-danger" data-dismiss="modal">Abbruch</button>
 			</div>
 		</div>
